--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "async-local-storage": "^2.3.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.1",
     "koa-combine-routers": "^3.0.0",
     "koa-router": "^11.0.2",
+    "pg": "^8.11.3",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
